--- a/widget/index.html
+++ b/widget/index.html
@@ -78,19 +78,7 @@
             if($scope.data && $scope.data.content && $scope.data.content.shareMessage ){
                 shareMessage = $scope.data.content.shareMessage;
             }
-
-            let link = {};
-            link.title = "Share App";
-            link.type = "website";
-            link.description = shareMessage;
-
-            buildfire.deeplink.generateUrl(link, function (err, result) {
-                if (err) {
-                    console.error(err)
-                } else {
-                    buildfire.device.share({subject: link.title, text: shareMessage, link: result.url});
-                }
-            });
+            buildfire.device.share({subject: "Share App", text: shareMessage, link: $scope.shareUrl});
         };
 
         function initDeviceSize(callback) {
