move all js codes to separate file

--- a/control/strings/index.html
+++ b/control/strings/index.html
@@ -13,7 +13,7 @@
   <!-- build:bundleControlBFMinJS -->
   <script src="../../../../scripts/buildfire.js"></script>
    <!-- endbuild -->
-   
+
    <!-- build:bundleJSFiles  -->
    <script src="../../data/language.js"></script>
    <script src="../../dataAccess/language.js"></script>
@@ -24,11 +24,6 @@
   <script src="../../widget/js/shared/strings.js"></script>
   <script src="../../widget/js/shared/stringsConfig.js"></script>
   <!-- endbuild -->
-
-  <!-- build:bundleStringJSFiles  -->
-  <script src="./js/stringsUI.js"></script>
-  <!-- endbuild  -->
-
 </head>
 
 
@@ -44,73 +39,9 @@
   <div id="stringsContainer">loading...</div>
 </body>
 
-<script>
-  let strings;
-  let delay = 350;
-  let timer;
-  function loadLanguage(lang) {
-    strings = new buildfire.services.Strings(lang, stringsConfig);
-    strings.init().then(() => {
-      strings.inject();
-    });
-    stringsUI.init("stringsContainer", strings, stringsConfig);
-  }
-
-  async function loadingAndCreateLanguage(lang) {
-    loadLanguage(lang);
-    createLanguage(lang);
-  }
-
-  function createLanguage(language) {
-    stringsContainer.disabled = true;
-    strings.createLanguage(language, () => {
-      stringsContainer.disabled = false;
-    });
-    return false;
-  }
-
-  function deleteLanguage() {
-    buildfire.notifications.confirm(
-      {
-        message: "Are you sure you want to remove support fo this language?",
-        confirmButton: { type: "danger" },
-      },
-      (e, r) => {
-        if (r.selectedButton.key == "confirm") {
-          strings.deleteLanguage(() => {
-            loadLanguage(langOptions.value);
-          });
-        }
-      }
-    );
-  }
-
-  function save() {
-    strings.save((r) => {
-      buildfire.messaging.sendMessageToWidget({ cmd: "refresh" });
-    });
-  }
-
-  const initialState = async () => {
-    await loadingAndCreateLanguage(langOptions.value);
-  };
-
-  async function checkInputs() {
-    var inputs = document.getElementsByTagName("input");
-    const events = ["keyup", "change"];
-    for (var j = 0; j < events.length; j++) {
-      for (var i = 0; i < inputs.length; i++) {
-        inputs[i].addEventListener(events[j], (e) => {
-          save();
-        });
-      }
-    }
-
-    return true;
-  }
-  initialState();
-  checkInputs();
-
-</script>
+  <!-- build:bundleStringJSFiles  -->
+  <script src="./js/stringsUI.js"></script>
+  <script src="./js/app.js"></script>
+  <!-- endbuild  -->
 
 </html>
