--- a/widget/index.html
+++ b/widget/index.html
@@ -22,11 +22,13 @@
     <!-- endbuild -->
     
     <script src="../js/shared.js"></script>
-
-    <!-- build:bundleJSFiles  -->
-    <script src="../data/language.js"></script>
-    <script src="../dataAccess/language.js"></script>
+    
+    <!-- build:bundleSharedJSFiles -->
+    <script src="./js/shared/strings.js" defer></script>
+    <script src="./js/shared/stringsConfig.js" defer></script>
     <!-- endbuild -->
+
+    <script src="./js/app.js" defer></script>
 
 </head>
 
@@ -52,14 +54,6 @@
             </div>
         </div>
     </div>
-
-    <!-- build:bundleSharedJSFiles -->
-    <script src="./js/shared/strings.js"></script>
-    <script src="./js/shared/stringsConfig.js"></script>
-    <!-- endbuild -->
-
-    <script src="./js/app.js"></script>
-
 </body>
 
 </html>
