fixed barcode not showing on some screens

--- a/widget/index.html
+++ b/widget/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../../../scripts/owlCarousel/owlCarousel.css"/>
     <link rel="stylesheet" href="../../../styles/helper.css"/>
     <link rel="stylesheet" href="../../../styles/siteIcons.css"/>
+    <link rel="stylesheet" href="./widget.css"/>
 
     <!-- JS -->
     <script type="text/javascript" src="../../../scripts/angular/angular.min.js"></script>
