--- a/control/content/index.html
+++ b/control/content/index.html
@@ -30,7 +30,7 @@
     <div class="col-md-9 pull-right">
       <p>NOTE: You can configure where Share App link will take your users by
         going
-        to "Share Settings" under "Settings" in the left menu.</p>
+        to "Share Settings" under "Advanced" in the left menu.</p>
     </div>
   </div>
   <br>
