--- a/widget/index.html
+++ b/widget/index.html
@@ -71,7 +71,7 @@
                      $scope.shareUrl = `${context.appPwaHost}/promo/${encodeURIComponent(context.appName)}`;
                  }
                  else {
-                     $scope.shareUrl = `http://${context.cpDomain}/api/promoProxy/${context.appId}`;
+                     $scope.shareUrl = `${context.wlAppHost}/api/promoProxy/${context.appId}`;
                  }
                 const qrcode = new QRCode("qrcodeContainer", {
                     text: $scope.shareUrl,
